[gd_scene load_steps=49 format=3 uid="uid://htmeeru1v4h8"]

[ext_resource type="Script" path="res://GDScript/GameScript/InterfaceScript/Interface.gd" id="1_5xait"]
[ext_resource type="Texture2D" uid="uid://yf82ro07spqe" path="res://Assets/2DAssets/Interface/Construction.png" id="1_q44jx"]
[ext_resource type="Script" path="res://GDScript/GameScript/InterfaceScript/Timer.gd" id="2_xjeol"]
[ext_resource type="Texture2D" uid="uid://ts3dlc4yk6jo" path="res://Assets/2DAssets/Interface/Buildings/Houses/small-house.png" id="3_gbasx"]
[ext_resource type="Texture2D" uid="uid://8r2tersk5nr3" path="res://Assets/2DAssets/Interface/Buildings/Houses/medium-house.png" id="4_dfwmb"]
[ext_resource type="Texture2D" uid="uid://byt22kdv6ktw7" path="res://Assets/2DAssets/Interface/Buildings/Houses/large-house.png" id="5_j0uc5"]
[ext_resource type="Texture2D" uid="uid://cbijw0bfmxbna" path="res://Assets/2DAssets/Interface/Buildings/Houses/apartment.png" id="6_kgbo8"]
[ext_resource type="Texture2D" uid="uid://cv22vjyn1ueaa" path="res://Assets/2DAssets/Interface/Buildings/Houses/skyscraper.png" id="7_duqr8"]
[ext_resource type="Texture2D" uid="uid://b6o70h01ydyis" path="res://Assets/2DAssets/Interface/Buildings/Public/city-hall.png" id="8_1b5uu"]
[ext_resource type="Texture2D" uid="uid://bwh84vinrl1y6" path="res://Assets/2DAssets/Interface/Buildings/Public/hospital.png" id="9_va2x0"]
[ext_resource type="Texture2D" uid="uid://uradaprkbeyg" path="res://Assets/2DAssets/Interface/Buildings/Public/museum.png" id="10_3w7my"]
[ext_resource type="Texture2D" uid="uid://im0mmmfyn012" path="res://Assets/2DAssets/Interface/Buildings/Public/school.png" id="11_aftwm"]
[ext_resource type="Texture2D" uid="uid://coxetjjevwifq" path="res://Assets/2DAssets/Interface/Buildings/Industrial/factory.png" id="12_s4i72"]
[ext_resource type="Texture2D" uid="uid://b02keqo64uslm" path="res://Assets/2DAssets/Interface/Buildings/Industrial/power-plant.png" id="13_k2p3l"]
[ext_resource type="Texture2D" uid="uid://d1bak1vlk44f1" path="res://Assets/2DAssets/Interface/Buildings/Industrial/solar-panel.png" id="14_wd0do"]
[ext_resource type="Texture2D" uid="uid://dkgtvtp6g5g7h" path="res://Assets/2DAssets/Interface/Buildings/Industrial/wind-turbine.png" id="15_wfm65"]
[ext_resource type="Texture2D" uid="uid://dp5mv54k4d6mq" path="res://Assets/2DAssets/Interface/Buildings/Commercial/Bakery.png" id="16_wxt2q"]
[ext_resource type="Texture2D" uid="uid://b25nxnnr8um4q" path="res://Assets/2DAssets/Interface/Buildings/Commercial/Barbershop.png" id="17_snd6s"]
[ext_resource type="Texture2D" uid="uid://conxnax8y6puv" path="res://Assets/2DAssets/Interface/Buildings/Commercial/Bookshop.png" id="18_27wky"]
[ext_resource type="Texture2D" uid="uid://m5h5da57tw57" path="res://Assets/2DAssets/Interface/Buildings/Commercial/farm.png" id="18_kb016"]
[ext_resource type="Texture2D" uid="uid://1mp7gd2pxsav" path="res://Assets/2DAssets/Interface/Buildings/Commercial/Casino.png" id="19_dg28o"]
[ext_resource type="Texture2D" uid="uid://cex77rqarhmht" path="res://Assets/2DAssets/Interface/Others/Decorative/bench.png" id="21_jhn4m"]
[ext_resource type="Texture2D" uid="uid://butp08ujbt2kp" path="res://Assets/2DAssets/Interface/Buildings/Commercial/Hardware.png" id="21_tse4m"]
[ext_resource type="Texture2D" uid="uid://clk0j7xji3uv6" path="res://Assets/2DAssets/Interface/Buildings/Commercial/Pharmacy.png" id="22_6wcch"]
[ext_resource type="Texture2D" uid="uid://chggo8hw2u60b" path="res://Assets/2DAssets/Interface/Others/Decorative/streetlight.png" id="22_038ja"]
[ext_resource type="Texture2D" uid="uid://cgv6inxknwam7" path="res://Assets/2DAssets/Interface/Others/Decorative/trees.png" id="23_pevaw"]
[ext_resource type="Texture2D" uid="uid://bxqevxc0yoliu" path="res://Assets/2DAssets/Interface/Others/Terrain/grass.png" id="24_vc05v"]
[ext_resource type="Texture2D" uid="uid://beq3oudp8yfe5" path="res://Assets/2DAssets/Interface/Others/Terrain/lake.png" id="25_qn2le"]
[ext_resource type="Texture2D" uid="uid://fo7v84wjawva" path="res://Assets/2DAssets/Interface/Others/Terrain/water.png" id="27_gyv68"]
[ext_resource type="Texture2D" uid="uid://b2eshtsc1pfcx" path="res://Assets/2DAssets/Interface/Others/Terrain/road.png" id="28_peh56"]

[sub_resource type="LabelSettings" id="LabelSettings_t4721"]
font_size = 9

[sub_resource type="LabelSettings" id="LabelSettings_x18k8"]
font_size = 14
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_84u7w"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7cvel"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tkl2v"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vpms4"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_tasgg"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eklb7"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pbk6y"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_g7c1p"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ngfh2"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qy6ek"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_52636"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_0xgn5"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_epjci"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1v3fr"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_foom5"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_msxx7"]
font_size = 10
font_color = Color(0, 0, 0, 1)

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_5xait")

[node name="DayTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 12.0
autostart = true

[node name="Co2Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 80.0
offset_right = 174.0
offset_bottom = 122.0
mouse_filter = 1
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="Co2Label" type="Label" parent="Co2Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -14.0
offset_right = 51.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
text = "TCo₂/year"
label_settings = SubResource("LabelSettings_t4721")

[node name="Co2Bar" type="ProgressBar" parent="Co2Background"]
modulate = Color(0.95782, 0.446297, 1.44392e-05, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 29.0
grow_horizontal = 2
value = 42.0

[node name="HappinessBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 240.0
offset_right = 174.0
offset_bottom = 282.0
mouse_filter = 1
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="HappinessLabel" type="Label" parent="HappinessBackground"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -14.0
offset_right = 51.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 0
text = "Happiness"
label_settings = SubResource("LabelSettings_t4721")

[node name="HappinessBar" type="ProgressBar" parent="HappinessBackground"]
modulate = Color(0.653786, 0.26679, 0.832991, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 2.0
offset_right = 70.0
offset_bottom = 29.0
grow_horizontal = 2
value = 72.0

[node name="Population" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 160.0
offset_right = 174.0
offset_bottom = 202.0
mouse_filter = 1
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="PopulationLabel" type="Label" parent="Population"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.0
offset_top = -11.5
offset_right = 61.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "103/106"
horizontal_alignment = 1

[node name="MoneyBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 20.0
offset_right = 174.0
offset_bottom = 62.0
mouse_filter = 1
color = Color(0.0562916, 0.0562916, 0.0562916, 1)

[node name="MoneyLabel" type="Label" parent="MoneyBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.5
offset_top = -11.5
offset_right = 36.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "123,400 $"

[node name="Year&DayBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 943.0
offset_top = 10.0
offset_right = 1144.0
offset_bottom = 71.0
mouse_filter = 1
color = Color(0.0562916, 0.0562916, 0.0562916, 1)
script = ExtResource("2_xjeol")

[node name="YearLabel" type="Label" parent="Year&DayBackground"]
layout_mode = 1
offset_right = 74.0
offset_bottom = 23.0

[node name="DayLabel" type="Label" parent="Year&DayBackground"]
layout_mode = 1
offset_top = 35.0
offset_right = 148.0
offset_bottom = 58.0

[node name="ConstructionMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.936
anchor_top = 1.0
anchor_right = 1.068
anchor_bottom = 1.0
offset_left = -418.272
offset_top = -555.0
offset_right = 273.664
offset_bottom = 55.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 10

[node name="ConstructionMenuBox" type="ColorRect" parent="ConstructionMenu"]
custom_minimum_size = Vector2(265, 400)
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="ConstructionMenuTitle" type="Label" parent="ConstructionMenu/ConstructionMenuBox"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 5.0
offset_right = 65.0
offset_bottom = 28.0
grow_horizontal = 2
text = "Construction Menu"
label_settings = SubResource("LabelSettings_x18k8")

[node name="ScrollContainer" type="ScrollContainer" parent="ConstructionMenu/ConstructionMenuBox"]
layout_mode = 0
offset_left = 10.0
offset_top = 29.0
offset_right = 255.0
offset_bottom = 400.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="BuildingsBox" type="ColorRect" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.956863, 0.960784, 0.980392, 1)

[node name="BuildingsLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox"]
layout_mode = 0
offset_left = 5.0
offset_right = 59.0
offset_bottom = 23.0
text = "Buildings"
label_settings = SubResource("LabelSettings_84u7w")

[node name="BuildingsUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel"]
layout_mode = 0
offset_left = -5.0
offset_top = 12.0
offset_right = 235.0
offset_bottom = 35.0
text = "━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_7cvel")

[node name="ResidentialsLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 25.0
offset_right = 64.0
offset_bottom = 48.0
text = "Residentials"
label_settings = SubResource("LabelSettings_tkl2v")

[node name="ResidentialsUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/ResidentialsLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 10.0
offset_right = 220.0
offset_bottom = 33.0
text = "━━━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_vpms4")

[node name="SmallHouse" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/ResidentialsLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 30.0
offset_right = 576.0
offset_bottom = 456.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_gbasx")

[node name="MediumHouse" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/ResidentialsLabel"]
layout_mode = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 537.0
offset_bottom = 532.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_dfwmb")

[node name="LargeHouse" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/ResidentialsLabel"]
layout_mode = 0
offset_left = 90.0
offset_top = 30.0
offset_right = 564.0
offset_bottom = 557.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_j0uc5")

[node name="Apartment" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/ResidentialsLabel"]
layout_mode = 0
offset_left = 140.0
offset_top = 30.0
offset_right = 602.0
offset_bottom = 570.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("6_kgbo8")

[node name="Skyscraper" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/ResidentialsLabel"]
layout_mode = 0
offset_left = 190.0
offset_top = 30.0
offset_right = 652.0
offset_bottom = 570.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_duqr8")

[node name="PublicLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 100.0
offset_right = 45.0
offset_bottom = 123.0
text = "Public"
label_settings = SubResource("LabelSettings_tasgg")

[node name="PublicUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/PublicLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 33.0
text = "━━━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_eklb7")

[node name="CityHall" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/PublicLabel"]
layout_mode = 0
offset_left = -7.0
offset_top = 25.0
offset_right = 539.0
offset_bottom = 482.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("8_1b5uu")

[node name="Hospital" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/PublicLabel"]
layout_mode = 0
offset_left = 43.0
offset_top = 20.0
offset_right = 466.0
offset_bottom = 610.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("9_va2x0")

[node name="Museum" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/PublicLabel"]
layout_mode = 0
offset_left = 90.0
offset_top = 29.0
offset_right = 705.0
offset_bottom = 435.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_3w7my")

[node name="School" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/PublicLabel"]
layout_mode = 0
offset_left = 143.0
offset_top = 27.0
offset_right = 693.0
offset_bottom = 481.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("11_aftwm")

[node name="IndustrialLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 175.0
offset_right = 52.0
offset_bottom = 198.0
text = "Industrial"
label_settings = SubResource("LabelSettings_pbk6y")

[node name="IndustrialUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/IndustrialLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 33.0
text = "━━━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_g7c1p")

[node name="Factory" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/IndustrialLabel"]
layout_mode = 0
offset_left = -13.0
offset_top = 30.0
offset_right = 537.0
offset_bottom = 484.0
scale = Vector2(0.09, 0.09)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("12_s4i72")

[node name="PowerPlant" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/IndustrialLabel"]
layout_mode = 0
offset_left = 40.0
offset_top = 35.0
offset_right = 632.0
offset_bottom = 457.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("13_k2p3l")

[node name="SolarPanel" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/IndustrialLabel"]
layout_mode = 0
offset_left = 90.0
offset_top = 35.0
offset_right = 606.0
offset_bottom = 518.0
scale = Vector2(0.08, 0.08)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("14_wd0do")

[node name="WindTurbine" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/IndustrialLabel"]
layout_mode = 0
offset_left = 140.0
offset_top = 35.0
offset_right = 656.0
offset_bottom = 518.0
scale = Vector2(0.09, 0.09)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("15_wfm65")

[node name="CommercialLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 265.0
offset_right = 63.0
offset_bottom = 288.0
text = "Commercial"
label_settings = SubResource("LabelSettings_ngfh2")

[node name="CommercialUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 33.0
text = "━━━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_qy6ek")

[node name="Bakery" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = -6.0
offset_top = 35.0
offset_right = 709.0
offset_bottom = 792.0
scale = Vector2(0.04, 0.04)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("16_wxt2q")

[node name="Barbershop" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = 45.0
offset_top = 30.0
offset_right = 684.0
offset_bottom = 910.0
scale = Vector2(0.04, 0.04)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("17_snd6s")

[node name="Bookshop" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = 95.0
offset_top = 35.0
offset_right = 802.0
offset_bottom = 830.0
scale = Vector2(0.04, 0.04)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("18_27wky")

[node name="Casino" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = 145.0
offset_top = 35.0
offset_right = 467.0
offset_bottom = 313.0
scale = Vector2(0.12, 0.12)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("19_dg28o")

[node name="Farm" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = 191.0
offset_top = 40.0
offset_right = 779.0
offset_bottom = 465.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("18_kb016")

[node name="Hardware" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = -6.0
offset_top = 80.0
offset_right = 99.0
offset_bottom = 261.0
scale = Vector2(0.04, 0.04)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("21_tse4m")

[node name="Pharmacy" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/BuildingsLabel/CommercialLabel"]
layout_mode = 0
offset_left = 40.0
offset_top = 77.0
offset_right = 514.0
offset_bottom = 1187.0
scale = Vector2(0.04, 0.04)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("22_6wcch")

[node name="OthersLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox"]
layout_mode = 0
offset_left = 5.0
offset_top = 400.0
offset_right = 45.0
offset_bottom = 423.0
text = "Others"
label_settings = SubResource("LabelSettings_52636")

[node name="OthersUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel"]
layout_mode = 0
offset_left = -5.0
offset_top = 12.0
offset_right = 235.0
offset_bottom = 35.0
text = "━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_0xgn5")

[node name="DecorativeLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 25.0
offset_right = 58.0
offset_bottom = 48.0
text = "Decorative"
label_settings = SubResource("LabelSettings_epjci")

[node name="DecorativeLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/DecorativeLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 33.0
text = "━━━━━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_1v3fr")

[node name="Bench" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/DecorativeLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 30.0
offset_right = 555.0
offset_bottom = 472.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("21_jhn4m")

[node name="Streetlight" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/DecorativeLabel"]
layout_mode = 0
offset_left = 50.0
offset_top = 17.0
offset_right = 343.0
offset_bottom = 868.0
scale = Vector2(0.07, 0.07)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("22_038ja")

[node name="Tree" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/DecorativeLabel"]
layout_mode = 0
offset_left = 90.0
offset_top = 26.0
offset_right = 655.0
offset_bottom = 468.0
scale = Vector2(0.08, 0.08)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("23_pevaw")

[node name="TerrainLabel" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel"]
layout_mode = 0
offset_left = 5.0
offset_top = 95.0
offset_right = 45.0
offset_bottom = 118.0
text = "Terrain"
label_settings = SubResource("LabelSettings_foom5")

[node name="TerrainUnderline" type="Label" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/TerrainLabel"]
layout_mode = 0
offset_left = -10.0
offset_top = 10.0
offset_right = 230.0
offset_bottom = 33.0
text = "━━━━━━━━━━━━━━━━━━━━━━━━"
label_settings = SubResource("LabelSettings_msxx7")

[node name="Grass" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/TerrainLabel"]
layout_mode = 0
offset_left = -6.0
offset_top = 30.0
offset_right = 1694.0
offset_bottom = 1730.0
scale = Vector2(0.02, 0.02)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("24_vc05v")

[node name="Water" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/TerrainLabel"]
layout_mode = 0
offset_left = 40.0
offset_top = 30.0
offset_right = 95.0
offset_bottom = 79.0
scale = Vector2(0.067, 0.067)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("27_gyv68")

[node name="Road" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/TerrainLabel"]
layout_mode = 0
offset_left = 90.0
offset_top = 30.0
offset_right = 144.0
offset_bottom = 79.0
scale = Vector2(0.067, 0.067)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("28_peh56")

[node name="Lake" type="TextureButton" parent="ConstructionMenu/ConstructionMenuBox/ScrollContainer/BuildingsBox/OthersLabel/TerrainLabel"]
layout_mode = 0
offset_left = 140.0
offset_top = 25.0
offset_right = 694.0
offset_bottom = 475.0
scale = Vector2(0.09, 0.09)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("25_qn2le")

[node name="ConstructionMenuButton" type="TextureButton" parent="ConstructionMenu"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_q44jx")

[connection signal="timeout" from="DayTimer" to="." method="_on_day_timer_timeout"]
[connection signal="pressed" from="ConstructionMenu/ConstructionMenuButton" to="." method="_on_construction_menu_button_pressed"]
